--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="1; url=https://bit.ly/Get_awesome_NFTs">
+    <meta http-equiv="refresh" content="1; url=https://go.fiverr.com/visit/?bta=421340&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fs%2FLqa2x7">
     <title>Fiverr thumbnail</title>
 </head>
 <body bgcolor='green'>
